5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1861_2181.log
== TEST (2019-06-26 18:21:33) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor = zeros(n**2 - n)

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:21:45) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor = zeros(n**2 - n)

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:22:08) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor = zeros(colunas**2 - colunas)

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:25:17) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n, n)

for i in range(linhas):
	for j in range(colunas):
		vetor[i, j] = matriz[i, j]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:25:27) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n, n)

for i in range(linhas):
	for j in range(colunas):
		vetor[i, j] = matriz[i, j]
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:26:27) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n, n)

for i in range(linhas):
	for j in range(colunas):
		if i != n-1-j:
			vetor[i, j] = matriz[i, j]
			
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:27:18) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros((n, n), dtype=int)

for i in range(linhas):
	for j in range(colunas):
		if i != n-1-j:
			vetor[i, j] = matriz[i, j]
			
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:28:11) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas
vetor = zeros((n, n), dtype=int)

for i in range(linhas):
	for j in range(colunas):
		if i != n-1-j:
			vetor[i, j] = matriz[i, j]
			
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:28:46) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas
vetor = zeros((n, n), dtype=int)

for i in range(linhas):
	for j in range(colunas):
		if i != n-1-j:
			vetor[i, j] = matriz[i, j]
			
print(vetor)
print(min(vetor))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:22) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - n
vetor = zeros(n)

i
k 0



for i in range(linhas):
	for j in range(colunas):
		while k <=n:
			if i != n-1-j:
				vetor[k] = matriz[i, j]
			
print(vetor)

-- ERROR:
File "XXXX", line 10
    k 0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:33) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - n
vetor = zeros(n)


k = 0



for i in range(linhas):
	for j in range(colunas):
		while k <=n:
			if i != n-1-j:
				vetor[k] = matriz[i, j]
			
print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:04) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - n
vetor = zeros(n)


k = 0



for i in range(linhas):
	for j in range(colunas):
		while k <=n:
			if i != n-1-j:
				vetor[k] = matriz[i, j]
				k = k + 1
print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:34:25) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)


k = 0



for i in range(linhas):
	for j in range(colunas):
		while k <=n:
			if i != n-1-j:
				vetor[k] = matriz[i, j]
				k = k + 1
print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:35:11) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)


k = 0



for i in range(linhas):
	for j in range(colunas):
		while k <=n:
			if i != n-1-j:
				vetor[k] = matriz[i, j]
				print(vetor[k])
				k = k + 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:35:36) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)


k = 0



for i in range(linhas):
	for j in range(colunas):
		while k <n:
			if i != n-1-j:
				vetor[k] = matriz[i, j]
				print(vetor[k])
				k = k + 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:35:51) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)


k = 0



for i in range(linhas):
	for j in range(colunas):
		while k <n:
			if i != n-1-j:
				vetor[k] = matriz[i, j]
				print(vetor[k])
				k = k + 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:37:39) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)


k = 0



for i in range(linhas):
	for j in range(colunas):
		while k < n:
			if i != colunas-1-j:
				vetor[k] = matriz[i, j]
				print(vetor[k])
				k = k + 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:39:24) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)


k = 0


while k < n:
	for i in range(linhas):
		for j in range(colunas):
			if i != colunas-1-j:
				vetor[ḱ] = matriz[i, j]
				k = k + 1
				print(vetor[k])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:40:34) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)

k = 0

while k < n:
	for i in range(linhas):
		for j in range(colunas):
			if i != colunas-1-j:
				vetor[ḱ] = matriz[i, j]
				k = k + 1

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:40:57) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)

k = 0

while k < n:
	for i in range(linhas):
		for j in range(colunas):
			if i != colunas-1-j:
				vetor[k] = matriz[i, j]
				k = k + 1

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:41:11) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)

k = 0

while k < n:
	for i in range(linhas):
		for j in range(colunas):
			if i != colunas-1-j:
				vetor[k] = matriz[i, j]
				k = k + 1

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:41:45) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n)

k = 0

while k < n:
	for i in range(linhas):
		for j in range(colunas):
			if i != colunas-1-j:
				vetor[k] = matriz[i, j]
				k = k + 1

print(min(vetor))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:42:32) 
-- CODE:
from numpy import *

matriz = array(eval(input("Matriz: ")), dtype=float)
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
n = colunas**2 - colunas
vetor = zeros(n, dtype=float)

k = 0

while k < n:
	for i in range(linhas):
		for j in range(colunas):
			if i != colunas-1-j:
				vetor[k] = matriz[i, j]
				k = k + 1

print(min(vetor))

-- EXECUTION TIME:
1.06939
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
12.3
---- user output:
12.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
